@@ -1,5 +1,8 @@
 RELEASE_NOTES for orcaUsbApp (Orca-Flash Camera USB Driver)
 ----------------------------------------------------
+R0.0.4:   2022-01-16   J. Vamosi
+          Debug option added (use environmental variable ORCA_DEBUG=ON)
+
 R0.0.3:   2021-10-29   J. Vamosi
           Exposure debug message removed to avoid flooding log file
 
